--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
     "@tailwindcss/postcss": "^4.1.12",
     "eslint": "^9",
     "eslint-config-next": "15.3.5",
+    "prettier": "^3.6.2",
+    "prettier-plugin-tailwindcss": "^0.6.14",
     "tailwindcss": "^4.1.12"
   }
 }
