--- a/jsconfig.json
+++ b/jsconfig.json
@@ -1,9 +1,14 @@
 {
   "compilerOptions": {
     "baseUrl": "src/",
+    "jsx": "react-jsx",
     "paths": {
-      "@/styles/*": ["styles/*"],
-      "@/components/*": ["components/*"]
+      "@/styles/*": [
+        "styles/*"
+      ],
+      "@/components/*": [
+        "components/*"
+      ]
     }
   }
 }
