Implement nested [project] routes

--- a/jsconfig.json
+++ b/jsconfig.json
@@ -6,6 +6,9 @@
       "@/styles/*": [
         "styles/*"
       ],
+      "@/data/*": [
+        "data/*"
+      ],
       "@/components/*": [
         "components/*"
       ]
